# anamorph

./: README.md  ffmpeg.md  meson.build
data/: Application.css  appdata.xml  gresource.xml  launcher.desktop  meson.build
debian/: changelog  control  copyright
src/: Application.vala  Fraction.vala  GstreamerDesqueezer.vala  GstreamerFileDesqueezer.vala  GstreamerMetadataReader.vala  MainWindow.vala
src/Views/: ErrorView.vala  ProgressView.vala  SetupView.vala  SuccessView.vala  WelcomeView.vala
